Fix legend popping out of viewport

--- a/src/VisAQ.css
+++ b/src/VisAQ.css
@@ -51,18 +51,13 @@
 }
 
 body {
-    height: 0vw;
-    width: 100vw!important;
-    padding: 0px;
     border: none;
     background-color: var(--primary-background-color);
 }
 
-#app {
-    background-color: var(--primary-background-color);
-}
-
-#app .container-fluid {
+#app, #app .container-fluid {
+    width: 100%;
+    height: 100%;
     background-color: var(--primary-background-color);
 }
 
